# SFMLDemo

./: CMakeLists.txt  CMakeSettings.json  Makefile  README.txt  config.txt
src/: main.cpp
